...
                                    </backgroundConfiguration>
                                    <attributedString key="attributedTitle">
                                        <fragment content="Новый клиент">
                                            <attributes>
                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <buttonConfiguration key="configuration" style="filled">
                                    <attributedString key="attributedTitle">
                                        <fragment content="Календарь">
                                            <attributes>
                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                    </view>
                    <navigationItem key="navigationItem" id="oRf-Dz-7Vj">
                        <barButtonItem key="rightBarButtonItem" title="Item" image="gearshape" catalog="system" style="done" id="ibD-wg-mzU">
                            <connections>
                                <segue destination="Wno-30-ccV" kind="show" id="y3e-U8-Szh"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Настройки" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEu-t2-mMR">
                                <rect key="frame" x="16" y="50" width="382" height="40.666666666666657"/>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="34"/>
...
                                        <buttonConfiguration key="configuration" style="filled" titleAlignment="automatic">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Clear data base">
                                                    <attributes>
                                                        <font key="NSFont" size="12" name="Helvetica"/>
...
                                        <buttonConfiguration key="configuration" style="filled">
                                            <attributedString key="attributedTitle">
                                                <fragment content="Add data in base">
                                                    <attributes>
                                                        <font key="NSFont" size="12" name="Helvetica"/>
...
                                    </backgroundConfiguration>
                                    <attributedString key="attributedTitle">
                                        <fragment content="Сохранить">
                                            <attributes>
                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                <rect key="frame" x="0.0" y="624" width="414" height="112"/>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Фамилия" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8qe-ip-kfo">
                                <rect key="frame" x="16" y="122.66666666666669" width="382" height="30"/>
                                <color key="backgroundColor" name="BackgroundLabel"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Имя" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TQT-tq-rky">
                                <rect key="frame" x="16" y="168.66666666666666" width="382" height="30"/>
                                <color key="backgroundColor" name="BackgroundLabel"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Телефон" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="g6a-96-4ad">
                                <rect key="frame" x="16" y="214.66666666666666" width="382" height="30"/>
                                <color key="backgroundColor" name="BackgroundLabel"/>
...
                                        <buttonConfiguration key="configuration" style="plain">
                                            <attributedString key="attributedTitle">
                                                <fragment content="▶︎">
                                                    <attributes>
                                                        <font key="NSFont" size="24" name="LucidaGrande"/>
...
